k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-app-service
  labels:
    app: bookstore-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: bookstore-app
